# wattdog

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  README.md  build.rs
.github/workflows/: build.yml
docs/: config.example.toml  config.md  config.rpi-lifepo4.example.toml  design.md  reference.md
ffi/: thornwave_scan.cc  thornwave_scan.h
packaging/: Containerfile  cleanup-example.sh  tmpfiles.d-wattdog.conf  wattdog.container
src/: cli.rs  config.rs  ffi.rs  http_server.rs  lib.rs  main.rs  metrics.rs  parquet_writer.rs  sample.rs  scanner.rs  shutdown.rs
src/action/: http.rs  mod.rs
src/state/: condition.rs  engine.rs  machine.rs  mod.rs
systemd/: wattdog.service
